resolved card cut off bug on small screen

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -426,13 +426,6 @@ footer {
 .prices-intro {
   margin-top: 3.5rem; }
 
-.color-overlay {
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.7);
-  opacity: 0.3;
-  position: absolute; }
-
 .prices {
   background-image: url("../../images/prices/flower.jpg");
   background-position: center;
@@ -456,10 +449,9 @@ footer {
     width: 25px;
     height: 25px; }
   .prices .carousel-item {
-    height: 75vh; }
+    height: 90vh; }
     .prices .carousel-item .card {
-      margin: auto;
-      margin-bottom: 30px;
+      margin: auto auto 30px;
       border: 1px solid #f1e4ed;
       background-color: #f1e4ed;
       border-radius: 10px;
@@ -474,20 +466,20 @@ footer {
     padding: 0.6rem 1.8rem; }
 
 @media (min-width: 576px) {
-  .carousel-item {
-    height: 60vh; } }
+  .prices .carousel-item {
+    height: 65vh; } }
 
 @media (min-width: 768px) {
-  .carousel-item {
-    height: 50vh; } }
+  .prices .carousel-item {
+    height: 60vh; } }
 
 @media (min-width: 992px) {
-  .carousel-item {
-    height: 40vh; } }
+  .prices .carousel-item {
+    height: 60vh; } }
 
 @media (min-width: 1200px) {
-  .carousel-item {
-    height: 20vh; } }
+  .prices .carousel-item {
+    height: 60vh; } }
 
 .contact-title {
   text-align: center; }
